--- a/Crime-Game.html
+++ b/Crime-Game.html
@@ -7,12 +7,19 @@
         <title>Crime-Game</title>
     </head>
     <body>
-        <div id="game">
-            <div id="title"></div>
-            <div id="description"></div>
-            <div id="start-btn"></div>
-        </div>
-        <footer></footer>
+        <main>
+            <div class="game">
+                <div id="title">
+                <h1 id="title">The Luthen Case</h1>
+                <p>Sprawa Luthen</p>
+                </div>
+                <div id="description">
+                    
+                </div>
+                <div id="start-btn"></div>
+            </div>
+            <footer></footer>
+        </main>            
         <script src="Crime-Game.script.js"></script>
     </body>
 </html>    
