Finish start page

--- a/Crime-Game.html
+++ b/Crime-Game.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta viewport content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Crime-Game.css">
-        <title>Crime-Game</title>
-    </head>
-    <body>
-        <main>
-            <div class="game">
-                <div id="title">
-                <h1 id="title">The Luthen Case</h1>
-                <p>Sprawa Luthen</p>
-                </div>
-                <div id="description">
-                    
-                </div>
-                <div id="start-btn"></div>
-            </div>
-            <footer></footer>
-        </main>            
-        <script src="Crime-Game.script.js"></script>
-    </body>
-</html>    
 
+<head>
+    <meta charset="UTF-8">
+    <meta viewport content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Crime-Game.css">
+    <title>Crime-Game</title>
+</head>
+
+<body>
+    <main>
+        <div class="game">
+            <div id="title">
+                <h1 id="title">The Luthen Case</h1>
+                <h2>Sprawa Luthen</h2>
+            </div>
+            <div id="description">
+                <p>In the shadowy city of Luthen, veiled in mist and secrets, a murder has disrupted the balance between the human world and the mirror dimension. As a renowned detective, you’ve been summoned to uncover the truth behind the death of Elias Althorn, the master of mirror magic. Every choice you make will bring you closer to the answer... or plunge the city into chaos. Will you dare to step into a world where the line between reality and reflection is perilously thin?</p>
+                <p>W mrocznym mieście Luthen, spowitym mgłą i tajemnicami, doszło do zbrodni, która zachwiała równowagą między światem ludzi a lustrzanym wymiarem. Jako słynny detektyw zostajesz wezwany, by odkryć prawdę o śmierci mistrza magii luster, Eliasza Althorna. Każda decyzja, którą podejmiesz, przybliży Cię do rozwiązania... lub pogrąży miasto w chaosie. Czy odważysz się wkroczyć do świata, gdzie granica między rzeczywistością a odbiciem staje się niebezpiecznie cienka?</p>
+            </div>
+            <div id="start-btn">
+                <button class="startPl">Rozpocznij przygodę (PL)</button>
+                <button class="startEng">Begin the adventure (ENG)</button>
+            </div>
+        </div>
+        <footer></footer>
+    </main>
+    <script src="Crime-Game.script.js"></script>
+</body>
+
+</html>
