I sorted the files into folders and started writing button functions

--- a/Crime-Game.html
+++ b/Crime-Game.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta viewport content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Crime-Game.css">
+    <link rel="stylesheet" href="styles/Crime-Game.css">
     <title>Crime-Game</title>
 </head>
 
@@ -12,12 +12,12 @@
     <main>
         <div class="game">
             <div id="title">
-                <h1 id="title">The Luthen Case</h1>
+                <h1>The Luthen Case</h1>
                 <h2>Sprawa Luthen</h2>
             </div>
             <div id="description">
-                <p>In the shadowy city of Luthen, veiled in mist and secrets, a murder has disrupted the balance between the human world and the mirror dimension. As a renowned detective, you’ve been summoned to uncover the truth behind the death of Elias Althorn, the master of mirror magic. Every choice you make will bring you closer to the answer... or plunge the city into chaos. Will you dare to step into a world where the line between reality and reflection is perilously thin?</p>
-                <p>W mrocznym mieście Luthen, spowitym mgłą i tajemnicami, doszło do zbrodni, która zachwiała równowagą między światem ludzi a lustrzanym wymiarem. Jako słynny detektyw zostajesz wezwany, by odkryć prawdę o śmierci mistrza magii luster, Eliasza Althorna. Każda decyzja, którą podejmiesz, przybliży Cię do rozwiązania... lub pogrąży miasto w chaosie. Czy odważysz się wkroczyć do świata, gdzie granica między rzeczywistością a odbiciem staje się niebezpiecznie cienka?</p>
+                <p id="text">In the shadowy city of Luthen, veiled in mist and secrets, a murder has disrupted the balance between the human world and the mirror dimension. As a renowned detective, you’ve been summoned to uncover the truth behind the death of Elias Althorn, the master of mirror magic. Every choice you make will bring you closer to the answer... or plunge the city into chaos. Will you dare to step into a world where the line between reality and reflection is perilously thin?</p>
+                <p id="text">W mrocznym mieście Luthen, spowitym mgłą i tajemnicami, doszło do zbrodni, która zachwiała równowagą między światem ludzi a lustrzanym wymiarem. Jako słynny detektyw zostajesz wezwany, by odkryć prawdę o śmierci mistrza magii luster, Eliasza Althorna. Każda decyzja, którą podejmiesz, przybliży Cię do rozwiązania... lub pogrąży miasto w chaosie. Czy odważysz się wkroczyć do świata, gdzie granica między rzeczywistością a odbiciem staje się niebezpiecznie cienka?</p>
             </div>
             <div id="start-btn">
                 <button class="startPl">Rozpocznij przygodę (PL)</button>
@@ -26,7 +26,7 @@
         </div>
         <footer></footer>
     </main>
-    <script src="Crime-Game.script.js"></script>
+    <script src="script/Crime-Game.script.js"></script>
 </body>
 
 </html>
