I fixed the functionality of the start buttons for Polish and English languages.

--- a/Crime-Game.html
+++ b/Crime-Game.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <div class="game">
+        <div class="game" id="game">
             <div id="title">
                 <h1>The Luthen Case</h1>
                 <h2>Sprawa Luthen</h2>
