Moved the character texts to a separate script, added character images, and implemented additional game functions.

--- a/Crime-Game.html
+++ b/Crime-Game.html
@@ -23,9 +23,11 @@
                 <button id="startPl">Rozpocznij przygodę (PL)</button>
                 <button id="startEng">Begin the adventure (ENG)</button>
             </div>
+            
         </div>
         <footer></footer>
     </main>
+    <script src="script/dialogs.js"></script>
     <script src="script/Crime-Game.script.js"></script>
 </body>
 
